--- a/main.ipynb
+++ b/main.ipynb
@@ -243,6 +243,7 @@
    ],
    "source": [
     "# Settings\n",
+    "x_train, y_train = x_train_ori, y_train_ori\n",
     "lossDMD = 12580\n",
     "lossMAE = 12580\n",
     "counter_train = 0\n",
