Mend the model and retrain

--- a/generate_datasets.ipynb
+++ b/generate_datasets.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Refer from https://github.com/leeyeehoo/CSRNet-pytorch/blob/master/make_dataset.ipynb\n",
     "import os\n",
@@ -76,12 +84,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 700/700 [01:04<00:00, 10.77it/s]\n",
-      "100%|██████████| 498/498 [00:40<00:00, 10.78it/s]\n"
+      "100%|██████████| 700/700 [00:48<00:00, 14.43it/s]\n",
+      "100%|██████████| 498/498 [00:24<00:00, 20.73it/s]\n"
      ]
     }
    ],
    "source": [
+    "for part in ['A', 'B']:\n",
+    "    for t in ['train', 'test']:\n",
+    "        if not os.path.exists('data/ShanghaiTech/part_{}/{}_data/ground/'.format(part, t)):\n",
+    "            os.mkdir('data/ShanghaiTech/part_{}/{}_data/ground/'.format(part, t))\n",
     "for img_paths in [img_paths_train, img_paths_test]:\n",
     "    for img_path in tqdm(img_paths):\n",
     "\n",
