Polish up DM generating, train without IN.

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "from keras.optimizers import Adam\n",
     "from keras.models import model_from_json\n",
-    "from SANet_sp import SANet\n",
+    "from SANet import SANet\n",
     "import shutil\n",
     "from utils import load_img, gen_x_y, eval_loss, gen_paths, ssim_eucli_loss, random_cropping\n",
     "\n",
