--- a/main.ipynb
+++ b/main.ipynb
@@ -75,12 +75,30 @@
    "outputs": [],
    "source": [
     "# Settings\n",
-    "\n",
+    "# model.load_weights('SANet_best.hdf5')\n",
+    "if not os.path.exists(weights_dir):\n",
+    "    os.makedirs(weights_dir)\n",
+    "# Two ways to set the different parts of model trainable\n",
+    "# Set different branches trainable seperatly(Each module has four branches)\n",
+    "branches_untrainable = [\n",
+    "    [2, 3, 4, 6, 7, 8, 11, 12, 13, 14, 15, 16, 18, 19, 20, 22, 23, 24, 27, 28, 29, 30, 31, 32, 34, 35, 36, 38, 39, 40, 43, 44, 45, 46, 47, 48, 50, 51, 52, 54, 55, 56],\n",
+    "    [2, 3, 4, 6, 7, 8, 12, 13, 15, 16, 17, 19, 20, 22, 23, 24, 28, 29, 31, 32, 33, 35, 36, 37, 39, 40, 44, 45, 47, 48, 49, 51, 52, 53, 55, 56],\n",
+    "    [1, 3, 4, 5, 7, 8, 11, 13, 14, 16, 17, 18, 20, 21, 22, 24, 27, 29, 30, 32, 33, 34, 36, 37, 38, 40, 43, 45, 46, 48, 49, 50, 52, 53, 54, 56],\n",
+    "    [1, 2, 4, 5, 6, 8, 11, 12, 14, 15, 17, 18, 19, 21, 22, 23, 27, 28, 30, 31, 33, 34, 35, 37, 38, 39, 43, 44, 46, 47, 49, 50, 51, 53, 54, 55]\n",
+    "]\n",
+    "# Set differernt modules trainable 3 Inception-like module and the Decoder module trainable seperatly.\n",
+    "branches_trainable = [\n",
+    "    list(range(1, 4+1)),\n",
+    "    list(range(5, 11+1)),\n",
+    "    list(range(12, 18+1)),\n",
+    "    list(range(19, 25+1)),\n",
+    "    list(range(26, 33+1))\n",
+    "]\n",
     "lossMAE = 1e5\n",
     "lossMDMD, lossMAPE, lossMSE = -1, -1, -1\n",
     "counter_train = 0\n",
     "mae = 1e5\n",
-    "val_rate = 0.1\n",
+    "val_rate = 0.2\n",
     "lossesMDMD = []\n",
     "lossesMAE = []\n",
     "lossesMAPE = []\n",
@@ -95,24 +113,47 @@
     "if dataset == 'A':\n",
     "    save_frequencies = [(90, 0.1), (80, 0.05), (95, 0.25)]\n",
     "else:\n",
-    "    save_frequencies = [(11, 0.1), (10, 0.05), (12, 0.25)]\n",
-    "epoch_train = 150\n",
+    "    save_frequencies = [(30, 0.1), (16, 0.05), (32, 0.25)]\n",
+    "\n",
+    "if_train_seperatly = True\n",
+    "if if_train_seperatly:\n",
+    "    module_step = 1\n",
+    "    epoch_train_seperatly = module_step * len(branches_untrainable) * 1\n",
+    "    epoch_train = epoch_train_seperatly + 100\n",
+    "else:\n",
+    "    epoch_train = 200\n",
+    "    \n",
     "\n",
     "# Training\n",
     "time_st = time.time()\n",
     "for epoch in range(epoch_train):\n",
+    "    if if_train_seperatly:\n",
+    "        trainable_choice = epoch % (module_step*len(branches_untrainable))\n",
+    "        # Train modules seperatly to avoid output all zeros\n",
+    "        if epoch < epoch_train_seperatly and trainable_choice in [0, module_step*1, module_step*2, module_step*3, module_step*4, module_step*5]:\n",
+    "            branch_trainable = branches_trainable[trainable_choice]\n",
+    "            for i in range(1, len(model.layers)):\n",
+    "                if 'conv' in model.layers[i].name or 'activa' in model.layers[i].name or 'norm' in model.layers[i].name or 1:\n",
+    "                    model.layers[i].trainable = False\n",
+    "            for i in range(1, len(model.layers)):\n",
+    "                idx_operator = int(model.layers[i].name.split('_')[-1])\n",
+    "                if idx_operator in branch_trainable:\n",
+    "                    model.layers[i].trainable = True\n",
+    "            model.compile(optimizer=Adam(lr=lr), loss=LOSS_train)\n",
+    "        elif epoch == epoch_train_seperatly:\n",
+    "            for i in range(1, len(model.layers)):\n",
+    "                model.layers[i].trainable = True\n",
+    "            model.compile(optimizer=Adam(lr=lr/10), loss=LOSS_train)\n",
+    "        else:\n",
+    "            pass\n",
+    "    \n",
     "    for i in range(len(x_train)):\n",
     "        if lossMAE < save_frequencies[0][0]:\n",
     "            val_rate = save_frequencies[0][1]\n",
     "            if lossMAE < save_frequencies[1][0]:\n",
     "                val_rate = save_frequencies[1][1]\n",
-    "        if len(lossesMAE) > 100 and val_rate <= save_frequencies[-1][-1] and np.median(lossesMAE[-20]) > save_frequencies[-1][0]:\n",
+    "        if len(lossesMAE) > 50 and val_rate <= save_frequencies[-1][-1] and np.median(lossesMAE[-20]) > save_frequencies[-1][0]:\n",
     "            val_rate = save_frequencies[-1][-1]\n",
-    "        # val_rate != save_frequencies[0][1] and val_rate != 0.25 and \n",
-    "#         if len(lossesMDMD) > 11 and np.sum(np.array(lossesMDMD[-10:]) < min(lossesMDMD[:-10])) < 1:\n",
-    "#             lr /= 10\n",
-    "#             optimizer = Adam(lr=lr)\n",
-    "#             model.compile(optimizer=optimizer, loss=LOSS_train)\n",
     "        x_, y_ = x_train[i], y_train[i]\n",
     "        model.fit(x_, y_, batch_size=1, verbose=0)\n",
     "#         x_crop, y_crop = random_cropping(x_, y_)\n",
@@ -137,7 +178,7 @@
     "                    ))\n",
     "                )\n",
     "                model.save_weights(os.path.join(weights_dir, '{}_best.hdf5'.format(net)))\n",
-    "            if counter_train % (len(x_train)*10) == 0:\n",
+    "            if counter_train % (len(x_train)*2) == 0:\n",
     "                # show prediction\n",
     "                pred = np.squeeze(model.predict(np.expand_dims(x_val_display, axis=0)))\n",
     "                fg, (ax_x_ori, ax_y, ax_pred) = plt.subplots(1, 3, figsize=(20, 4))\n",
@@ -149,15 +190,15 @@
     "                ax_pred.set_title('Prediction: ' + str(np.sum(pred)))\n",
     "                plt.suptitle('Loss = ' + str(lossMAE))\n",
     "                plt.show()\n",
-    "                if (epoch+1) % (50) == 0:\n",
-    "                    # plot val_loss\n",
-    "                    plt.plot(lossesMDMD, 'r')\n",
-    "                    plt.plot(lossesMAE, 'b')\n",
-    "                    plt.plot(lossesMAPE, 'y')\n",
-    "                    plt.plot(lossesMSE, 'c')\n",
-    "                    plt.legend(['Loss_Density_Map_Distance', 'LossMAE', 'LossMAPE', 'LossMSE'])\n",
-    "                    plt.title('Loss')\n",
-    "                    plt.show()\n",
+    "            if counter_train % (len(x_train)*1) == 0 and (epoch+1) % (4) == 0:\n",
+    "                # plot val_loss\n",
+    "                plt.plot(lossesMDMD, 'r')\n",
+    "                plt.plot(lossesMSE, 'c')\n",
+    "                plt.plot(lossesMAE, 'b')\n",
+    "                plt.plot(lossesMAPE, 'y')\n",
+    "                plt.legend(['Loss_Density_Map_Distance', 'LossMSE', 'LossMAE', 'LossMAPE'])\n",
+    "                plt.title('Loss')\n",
+    "                plt.show()\n",
     "        time_now = time.time()\n",
     "        time_consuming = time_now - time_st\n",
     "        sys.stdout.write('In epoch {}_{}, with MAE={}, MSE={}, MAPE={}, MDMD={}, time consuming={}m-{}s\\r'.format(\n",
@@ -214,20 +255,6 @@
     "plt.suptitle('Loss = ' + str(lossMAE))\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.load_weights('./SANet_MAE15.316_MSE29.441_MAPE0.11_MDMD125.635_epoch70-200.hdf5')\n",
-    "lossMDMD, lossMAE, lossMAPE, lossMSE = eval_loss(model, x_val, y_val)\n",
-    "print(lossMDMD, lossMAE, lossMAPE, lossMSE)\n",
-    "with open('SANet_noIN.json'.format(net), 'w') as fout:\n",
-    "    fout.write(model.to_json())\n",
-    "model.save_weights('SANet_noIN_MAE14.32_MSE22.88_MAPE12.22_MDMD110.62_epoch7-240.hdf5')"
-   ]
   }
  ],
  "metadata": {
@@ -246,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
